[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/PlayerController.gd" type="Script" id=1]
[ext_resource path="res://Prefabs/Player.tscn" type="PackedScene" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Down"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -575 ), Vector2( 0, -453.2 ), Vector2( 0, -61 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Up"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -61 ), Vector2( 0, -453.2 ), Vector2( 0, -575 ) ]
}

[node name="PlayerController" type="Node2D"]
script = ExtResource( 1 )

[node name="Player1" parent="." instance=ExtResource( 2 )]
position = Vector2( -116, 50 )
isActive = true

[node name="Player2" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -575 )
character = true

[node name="Camera1" type="Camera2D" parent="."]
position = Vector2( 0, -575 )
current = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera1"]
anims/Down = SubResource( 1 )
anims/Up = SubResource( 2 )

[node name="Camera2" type="Camera2D" parent="."]
position = Vector2( 0, -575 )
